[package]
name = "pallet-shift-session-manager"
description = "A Substrate Runtime module that selects 2/3 of initial validators for every session"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }

# Substrate Dependencies

frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-session = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-staking = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[dev-dependencies]
sp-core = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-staking/std",
	"sp-std/std",
]
