[package]
name = "bp-message-lane"
description = "Primitives of message lane module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

# Substrate Dependencies

frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std"
]
