[package]
name = "bp-millau"
description = "Primitives of Millau runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies

bp-message-lane = { path = "../message-lane", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }
fixed-hash = { version = "0.6.1", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
impl-codec = { version = "0.4.2", default-features = false }
impl-serde = { version = "0.3.1", optional = true }
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate Based Dependencies

frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-api = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-trie = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]
std = [
	"bp-message-lane/std",
	"bp-runtime/std",
	"fixed-hash/std",
	"frame-support/std",
	"hash256-std-hasher/std",
	"impl-codec/std",
	"impl-serde",
	"parity-util-mem/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
