[package]
name = "bp-rialto"
description = "Primitives of Rialto runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies

bp-message-lane = { path = "../message-lane", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies

frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-api = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]
std = [
	"bp-message-lane/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
